# doutorado-gpp

dockingpp/: README.md  pyproject.toml
dockingpp/configs/: default.yaml
dockingpp/dockingpp/: __init__.py  cli.py
dockingpp/dockingpp.egg-info/: SOURCES.txt  requires.txt  top_level.txt
dockingpp/tests/: test_aggregate_runs.py  test_debug_audit_tracing.py  test_debug_integration_smoke.py  test_debug_logger_noop.py  test_debug_logger_write.py  test_expensive_pipeline.py  test_expensive_score.py  test_expensive_skip.py  test_gui_docking_mode_mapping.py  test_gui_reports_import.py  test_gui_reports_reduced_fallback.py  test_io_pdb.py  test_metrics_series_progress.py  test_pdb_clean.py  test_pdb_extract.py  test_phd_strategy_pipeline.py  test_pipeline_smoke.py  test_pocket_grid.py  test_pocket_selection.py  test_pockets_fallback.py  test_rank_pockets.py  test_reducao_admissibilidade.py  test_reducao_auditoria_logs.py  test_reducao_geometria_bolsao.py  test_reducao_integracao_run.py  test_reducao_perfil_peptideo.py  test_reducao_pre_afinidade.py  test_reducao_ranking_bolsoes.py  test_reducao_seletor_bolsoes.py  test_reduced_aggregate.py  test_report_and_summary_json.py  test_reporting_aggregates.py  test_reporting_loaders.py  test_reporting_normalize.py  test_reporting_plots_smoke.py  test_reporting_schema.py  test_reports_page_smoke.py  test_scan_geom_kdtree.py  test_scan_smoke.py  test_scoring_cheap.py  (+2 more)
dockingpp/validation_geom_calibration/: analysis_bundle.json  case_pocket_table.csv  case_pocket_table.json  correlations.json  diagnostic_findings.json  report.md  (+4 more)
(+70 files in other folders)
